<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="infnet.edu.br.tp3fundamentosandroidjava.Activity.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/edit_altura"
            android:ems="10"
            android:hint="@string/digite_nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/edit_altura"
            android:ems="10"
            android:fontFamily=""
            android:hint="@string/digite_senha"
            android:inputType="textPassword" />

        <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/edit_email"
           android:hint="@string/email"
           android:inputType="textEmailAddress"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteX="6dp"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="@dimen/edit_largura"
            android:layout_height="wrap_content"
            android:id="@+id/edit_telefone"
            android:hint="@string/telefone"
            android:inputType="number" />

        <EditText
            android:layout_width="@dimen/edit_largura"
            android:layout_height="wrap_content"
            android:id="@+id/edit_celular"
            android:hint="@string/celular"
            android:inputType="number"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/edit_cpf"
            android:layout_width="@dimen/edit_largura"
            android:layout_height="40dp"
            android:height="@dimen/edit_altura"
            android:ems="10"
            android:hint="@string/cpf"
            android:inputType="number"
            tools:layout_editor_absoluteY="228dp"
            tools:layout_editor_absoluteX="22dp"
            android:layout_below="@+id/edit_telefone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edit_cidade"
            android:layout_width="@dimen/edit_largura"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_height="40dp"
            android:hint="@string/cidade"
            tools:layout_editor_absoluteY="216dp"
            tools:layout_editor_absoluteX="234dp"
            android:layout_alignBaseline="@+id/edit_cpf"
            android:layout_alignBottom="@+id/edit_cpf"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/apagar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar" />

    <Button
        android:id="@+id/btnVisualizarUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/visualizar_contatos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnVisualizarUsuarios" />


</android.support.constraint.ConstraintLayout>
